tests/integration/errors/occurs/sum/main.cx
data List<a> { Cons(a, List<a>), Nil }
fun bad(a) { Cons(a, a) }
